refactor: Rename and restructure clinic documentation to organization
- Updated references from "clinic" to "organization" across configuration, source, and documentation files to reflect the new terminology.
- Removed deprecated clinic documentation files and replaced them with organization-specific content, enhancing clarity and relevance for users.
- Adjusted search and routing logic to accommodate the new organization portal, ensuring seamless navigation and functionality.

--- a/src/content/docs/developer/en/integrations/stripe.mdx
+++ b/src/content/docs/developer/en/integrations/stripe.mdx
@@ -113,7 +113,7 @@ For each payment, funds are distributed:
 Gross Payment: €100.00
 ├─ Stripe Processing: ~€2.90 (2.9% + €0.25)
 ├─ Platform Fee: €8.00 (8% for Top Expert)
-├─ Clinic Fee: €15.00 (15%)
+├─ Organization Fee: €15.00 (15%)
 └─ Expert Net: €74.10
 ```
 
