--- a/src/content/docs/developer/en/webhooks/events.mdx
+++ b/src/content/docs/developer/en/webhooks/events.mdx
@@ -193,7 +193,7 @@ Fired when a payment is successful.
     },
     "commission": {
       "platform": 800,
-      "clinic": 1500,
+      "organization": 1500,
       "expertNet": 7700
     }
   }
@@ -361,7 +361,7 @@ Fired when organization settings are updated.
   "created": "2024-01-15T11:00:00Z",
   "data": {
     "changes": {
-      "clinicCommissionRate": {
+      "organizationCommissionRate": {
         "from": 1500,
         "to": 1800
       }
