--- a/src/content/docs/developer/en/webhooks/overview.mdx
+++ b/src/content/docs/developer/en/webhooks/overview.mdx
@@ -117,7 +117,7 @@ All webhook payloads follow this structure:
   },
   "organization": {
     "id": "org_xyz789",
-    "name": "Your Clinic"
+    "name": "Your Organization"
   }
 }
 ```
