--- a/src/content/docs/workspace/en/analytics/dashboard.mdx
+++ b/src/content/docs/workspace/en/analytics/dashboard.mdx
@@ -29,7 +29,7 @@ Access your analytics at **Partner Dashboard** → **Analytics**.
 Track your organization's financial performance:
 
 - **Gross Bookings**: Total value of all bookings
-- **Clinic Revenue**: Your marketing fee earnings
+- **Organization Revenue**: Your marketing fee earnings
 - **Expert Payouts**: Amount paid to your team
 - **Platform Fees**: Eleva's platform charges
 
@@ -85,7 +85,7 @@ Profile Views → Booking Started → Booking Completed → Attended
 
 See where patients come from:
 
-- Direct (your clinic profile)
+- Direct (your organization profile)
 - Search (Eleva Care search)
 - Expert profile
 - External referral
@@ -259,11 +259,10 @@ If you have questions about your data:
 ## Next Steps
 
 <Cards>
-  <Card title="Optimize Performance" href="/docs/clinic/team/experts">
+  <Card title="Optimize Performance" href="/docs/organization/team/experts">
     Use insights to improve expert performance
   </Card>
-  <Card title="Grow Revenue" href="/docs/clinic/pricing/revenue">
+  <Card title="Grow Revenue" href="/docs/organization/pricing/revenue">
     Understand how to increase your earnings
   </Card>
 </Cards>
-
