--- a/src/content/docs/workspace/en/getting-started/branding.mdx
+++ b/src/content/docs/workspace/en/getting-started/branding.mdx
@@ -30,7 +30,7 @@ Every organization can customize:
 
 With the Professional plan, you unlock:
 
-- **Custom URL Slug**: `eleva.care/your-clinic-name`
+- **Custom URL Slug**: `eleva.care/your-organization-name`
 - **Branded Booking Flow**: Your logo and colors throughout the booking process
 - **Custom Confirmation Emails**: Include your branding in client communications
 
@@ -48,7 +48,7 @@ Enterprise partners can fully white-label the Eleva Care experience:
 
 ### Custom Domain
 
-- Use your own domain: `telehealth.your-clinic.com`
+- Use your own domain: `telehealth.your-organization.com`
 - SSL certificate included
 - Automatic redirects configured
 
@@ -106,5 +106,3 @@ Our partner success team can help with branding:
 - **Enterprise Setup**: Dedicated support for white-label configuration
 
 Contact us at partners@eleva.care
-
-
