--- a/src/content/docs/workspace/en/getting-started/setup.mdx
+++ b/src/content/docs/workspace/en/getting-started/setup.mdx
@@ -1,11 +1,11 @@
 ---
 title: Set Up Your Organization
-description: Complete guide to setting up your clinic or healthcare organization on Eleva Care.
+description: Complete guide to setting up your organization on Eleva Care platform.
 ---
 
 # Set Up Your Organization
 
-This guide walks you through the complete setup process for your clinic or healthcare organization on Eleva Care.
+This guide walks you through the complete setup process for your organization on Eleva Care—whether you're a medical practice, wellness center, employer, or healthcare institution.
 
 ## Step 1: Apply for Partnership
 
@@ -17,7 +17,7 @@ Before you can set up your organization, you need to apply for partnership:
 4. Our team will review your application (typically 5 business days)
 
 <Callout type="info">
-  **Approval Requirements**: We review your practice credentials, services offered, and alignment with our women's health mission.
+  **Approval Requirements**: We review your organization credentials, services offered, and alignment with our women's health mission.
 </Callout>
 
 ## Step 2: Create Organization Profile
@@ -26,7 +26,7 @@ Once approved, you'll have access to the Partner Dashboard:
 
 ### Basic Information
 
-- **Organization Name**: Your clinic or practice name
+- **Organization Name**: Your practice or business name
 - **Description**: A compelling description of your services (up to 500 characters)
 - **Logo**: High-resolution logo (recommended: 400x400px, PNG or SVG)
 - **Cover Image**: Banner image for your profile (recommended: 1200x400px)
@@ -70,20 +70,20 @@ Select the healthcare categories your organization covers:
 
 ## Step 4: Set Your Marketing Fee
 
-As a clinic, you earn a marketing fee from each booking made through your experts:
+As an organization, you earn a marketing fee from each booking made through your experts:
 
-| Clinic Tier | Marketing Fee | Expert Minimum |
-|-------------|---------------|----------------|
+| Organization Tier | Marketing Fee | Expert Minimum |
+|-------------------|---------------|----------------|
 | Basic | 10-15% | 70% |
 | Standard | 15-20% | 65% |
 | Premium | 20-25% | 60% |
 
-**Example**: For a $100 booking with 15% clinic fee:
+**Example**: For a $100 booking with 15% organization fee:
 - Eleva Platform: $8-12 (8-12%)
-- Your Clinic: $15 (15%)
+- Your Organization: $15 (15%)
 - Expert: $73-77 (73-77%)
 
-[Learn more about revenue sharing →](/docs/clinic/pricing/revenue)
+[Learn more about revenue sharing →](/docs/organization/pricing/revenue)
 
 ## Step 5: Invite Your Team
 
@@ -94,7 +94,7 @@ Once your organization is set up, invite your healthcare professionals:
 3. Enter the expert's email address
 4. They'll receive an invitation to join your organization
 
-[Learn about team management →](/docs/clinic/team/experts)
+[Learn about team management →](/docs/organization/team/experts)
 
 ## Step 6: Go Live
 
@@ -106,17 +106,15 @@ Before publishing your organization:
 - [ ] At least one expert has joined
 - [ ] Expert profiles are complete and published
 
-Click **Publish Organization** to make your clinic visible to patients!
+Click **Publish Organization** to make your organization visible to patients!
 
 ## Next Steps
 
 <Cards>
-  <Card title="Customize Branding" href="/docs/clinic/getting-started/branding">
+  <Card title="Customize Branding" href="/docs/organization/getting-started/branding">
     Make your organization stand out with custom branding
   </Card>
-  <Card title="Invite Experts" href="/docs/clinic/team/invitations">
+  <Card title="Invite Experts" href="/docs/organization/team/invitations">
     Learn how to onboard your healthcare professionals
   </Card>
 </Cards>
-
-
