--- a/src/content/docs/workspace/en/index.mdx
+++ b/src/content/docs/workspace/en/index.mdx
@@ -1,22 +1,22 @@
 ---
-title: Welcome to Clinic Portal
+title: Welcome to Organization Portal
 description: Power your healthcare organization with Eleva Care's technology platform. Manage your team, access analytics, and grow your practice.
 ---
 
-# Welcome to Clinic Portal
+# Welcome to Organization Portal
 
-Eleva Care empowers clinics, wellness centers, and healthcare organizations to deliver digital health services through our proven platform technology. This resource center will help you set up and manage your organization effectively.
+Eleva Care empowers healthcare organizations—clinics, wellness centers, employers, and health institutions—to deliver digital health services through our proven platform technology. This resource center will help you set up and manage your organization effectively.
 
 ## Why Partner with Eleva Care?
 
 <Cards>
-  <Card title="Ready-to-Use Technology" href="/docs/clinic/getting-started/setup">
+  <Card title="Ready-to-Use Technology" href="/docs/organization/getting-started/setup">
     Skip the build phase. Our proven platform includes scheduling, video consultations, payments, and client management.
   </Card>
-  <Card title="Access Expert Network" href="/docs/clinic/team/experts">
+  <Card title="Access Expert Network" href="/docs/organization/team/experts">
     Offer your clients access to our network of independent, licensed healthcare professionals, or onboard your own team.
   </Card>
-  <Card title="Flexible Business Model" href="/docs/clinic/pricing/revenue">
+  <Card title="Flexible Business Model" href="/docs/organization/pricing/revenue">
     Workspace subscriptions with transparent pricing. Scale up or down based on your organization's needs.
   </Card>
 </Cards>
@@ -41,14 +41,31 @@ Eleva Care empowers clinics, wellness centers, and healthcare organizations to d
 
 ### What You Provide
 
-- ✅ Your clinical expertise and team
+- ✅ Your team of healthcare professionals
 - ✅ Patient acquisition and marketing
 - ✅ Brand and reputation building
 - ✅ Administrative support for your experts
 
 <Callout type="info">
-  **Partnership Model**: Eleva Care provides the technology platform. You, as a clinic, provide the healthcare services through your team of professionals.
+  **Partnership Model**: Eleva Care provides the technology platform. Your organization manages the healthcare services through your team of independent professionals.
 </Callout>
+
+## Who Can Partner?
+
+<Cards>
+  <Card title="Medical Practices" href="/docs/organization/getting-started/setup">
+    OB/GYN clinics, women's health centers, primary care practices, specialty groups
+  </Card>
+  <Card title="Wellness Centers" href="/docs/organization/getting-started/setup">
+    Integrative health centers, holistic wellness spaces, mind-body centers
+  </Card>
+  <Card title="Mental Health" href="/docs/organization/getting-started/setup">
+    Therapy practices, counseling centers, perinatal mental health specialists
+  </Card>
+  <Card title="Employers & Institutions" href="/docs/organization/getting-started/setup">
+    Corporate wellness programs, health benefits providers, educational institutions
+  </Card>
+</Cards>
 
 ## Partnership Tiers
 
@@ -62,7 +79,7 @@ Perfect for small practices getting started:
 
 ### Professional Plan
 
-Ideal for growing practices:
+Ideal for growing organizations:
 - Up to 10 expert profiles
 - Advanced analytics & insights
 - Priority support
@@ -78,7 +95,7 @@ For large organizations:
 - Dedicated account manager
 - **Custom pricing**
 
-[Compare plans →](/docs/clinic/pricing/plans)
+[Compare plans →](/docs/organization/pricing/plans)
 
 ## Revenue Model
 
@@ -88,31 +105,14 @@ Our three-party revenue model ensures fair compensation for everyone:
 |-------|--------------|---------|
 | **Patient** | Pays full amount | For healthcare services |
 | **Expert** | 60-77% minimum | Service delivery |
-| **Clinic** | 10-25% | Patient acquisition, marketing |
+| **Organization** | 10-25% | Patient acquisition, marketing |
 | **Eleva** | 8-20% | Platform, technology, payments |
 
 <Callout type="success">
-  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees (platform + clinic) never exceed 40%.
+  **Expert Protection**: Experts always receive at least 60% of the booking amount. Combined fees (platform + organization) never exceed 40%.
 </Callout>
 
-[Learn about revenue sharing →](/docs/clinic/pricing/revenue)
-
-## Who Uses Eleva Care for Organizations?
-
-<Cards>
-  <Card title="Medical Practices" href="/docs/clinic/use-cases/medical">
-    OB/GYN clinics, women's health centers, primary care practices
-  </Card>
-  <Card title="Wellness Centers" href="/docs/clinic/use-cases/wellness">
-    Integrative health centers, holistic wellness spaces, mind-body centers
-  </Card>
-  <Card title="Mental Health" href="/docs/clinic/use-cases/mental-health">
-    Therapy practices, counseling centers, perinatal mental health
-  </Card>
-  <Card title="Nutrition & Fitness" href="/docs/clinic/use-cases/nutrition-fitness">
-    Nutrition clinics, dietitian practices, pelvic health studios
-  </Card>
-</Cards>
+[Learn about revenue sharing →](/docs/organization/pricing/revenue)
 
 ## Getting Started Checklist
 
@@ -128,16 +128,16 @@ Before you can start receiving bookings, complete these steps:
 ## Quick Links
 
 <Cards>
-  <Card title="Set Up Your Organization" href="/docs/clinic/getting-started/setup">
+  <Card title="Set Up Your Organization" href="/docs/organization/getting-started/setup">
     Create your organization profile and branding
   </Card>
-  <Card title="Manage Your Team" href="/docs/clinic/team/experts">
+  <Card title="Manage Your Team" href="/docs/organization/team/experts">
     Invite and manage healthcare professionals
   </Card>
-  <Card title="View Analytics" href="/docs/clinic/analytics/dashboard">
+  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
     Track utilization, outcomes, and ROI
   </Card>
-  <Card title="Understand Pricing" href="/docs/clinic/pricing/plans">
+  <Card title="Understand Pricing" href="/docs/organization/pricing/plans">
     Learn about plans and revenue sharing
   </Card>
 </Cards>
@@ -153,5 +153,3 @@ Our dedicated partner support team is here to help you succeed:
 <Callout type="success">
   Ready to get started? [Apply for partnership →](/contact?partner=true)
 </Callout>
-
-
