--- a/src/content/docs/workspace/en/pricing/plans.mdx
+++ b/src/content/docs/workspace/en/pricing/plans.mdx
@@ -16,7 +16,7 @@ Choose the partnership plan that fits your organization's size and needs. All pl
 | **Analytics** | Basic | Advanced | Enterprise |
 | **Support** | Email | Priority | 24/7 + Account Manager |
 | **Branding** | Standard | Custom booking pages | Full white-label |
-| **Domain** | eleva.care/clinic | Custom slug | Custom domain |
+| **Domain** | eleva.care/org | Custom slug | Custom domain |
 | **API Access** | ❌ | ❌ | ✅ |
 | **Multi-location** | ❌ | ✅ | ✅ |
 | **SLA** | Standard | 99.5% uptime | Custom |
@@ -40,12 +40,12 @@ Choose the partnership plan that fits your organization's size and needs. All pl
 
 - Solo practitioners expanding to a small team
 - Wellness coaches forming a group practice
-- Specialty clinics testing digital services
-- New practices building their team
+- Specialty practices testing digital services
+- New organizations building their team
 
 ## Professional Plan — €199/month
 
-**Perfect for**: Growing practices and established wellness centers looking to scale.
+**Perfect for**: Growing practices and established organizations looking to scale.
 
 ### Included Features
 
@@ -58,17 +58,17 @@ Everything in Starter, plus:
 - Marketing support and resources
 - Team management dashboard
 - Multi-location support
-- Custom domain integration (`eleva.care/your-clinic`)
+- Custom domain integration (`eleva.care/your-organization`)
 
 ### Best For
 
 - Growing multi-provider practices
 - Established wellness centers
 - Organizations with multiple locations
-- Clinics focused on scaling
+- Practices focused on scaling
 
 <Callout type="tip">
-  **Most Popular**: Professional is our most popular plan for clinics with 4-10 healthcare professionals.
+  **Most Popular**: Professional is our most popular plan for organizations with 4-10 healthcare professionals.
 </Callout>
 
 ## Enterprise Plan — Custom Pricing
@@ -93,7 +93,7 @@ Everything in Professional, plus:
 ### Best For
 
 - Hospital systems
-- Large clinic networks
+- Large practice networks
 - Employer health programs
 - Healthcare organizations with 10+ providers
 
@@ -114,7 +114,7 @@ Contact our sales team to discuss volume pricing.
 ### Core Platform Features
 
 - **Scheduling System**: Real-time booking with availability management
-- **Video Consultations**: HIPAA-compliant video calls
+- **Video Consultations**: Secure, compliant video calls
 - **Payment Processing**: Stripe-powered secure payments
 - **Client Management**: Patient records and history
 - **Notifications**: Email and SMS reminders
@@ -130,7 +130,7 @@ Contact our sales team to discuss volume pricing.
 
 - GDPR compliant
 - SOC 2 Type II certified
-- HIPAA-ready infrastructure
+- Healthcare-ready infrastructure
 - Data encryption at rest and in transit
 
 ## Frequently Asked Questions
@@ -172,12 +172,10 @@ No setup fees. You pay only the monthly subscription and the platform fees on bo
 ## Next Steps
 
 <Cards>
-  <Card title="Understand Revenue Sharing" href="/docs/clinic/pricing/revenue">
+  <Card title="Understand Revenue Sharing" href="/docs/organization/pricing/revenue">
     Learn how revenue is distributed between parties
   </Card>
-  <Card title="Set Up Your Organization" href="/docs/clinic/getting-started/setup">
+  <Card title="Set Up Your Organization" href="/docs/organization/getting-started/setup">
     Get started with your partnership
   </Card>
 </Cards>
-
-
