--- a/src/content/docs/workspace/en/pricing/revenue.mdx
+++ b/src/content/docs/workspace/en/pricing/revenue.mdx
@@ -1,11 +1,11 @@
 ---
 title: Revenue Sharing Model
-description: Understand how revenue is distributed between patients, experts, clinics, and Eleva Care.
+description: Understand how revenue is distributed between patients, experts, organizations, and Eleva Care.
 ---
 
 # Revenue Sharing Model
 
-Eleva Care uses a transparent three-party revenue model that ensures fair compensation for everyone involved—patients, experts, clinics, and the platform.
+Eleva Care uses a transparent three-party revenue model that ensures fair compensation for everyone involved—patients, experts, organizations, and the platform.
 
 ## How It Works
 
@@ -18,7 +18,7 @@ Patient pays $100 for consultation
 │        REVENUE DISTRIBUTION        │
 ├────────────────────────────────────┤
 │ Eleva Platform Fee    8-20%        │
-│ Your Clinic Fee       10-25%       │
+│ Your Organization Fee 10-25%       │
 │ Expert Payment        60-82%       │
 └────────────────────────────────────┘
 ```
@@ -38,12 +38,12 @@ Paid by the expert for platform services:
 
 **Covers**: Technology platform, payment processing, video infrastructure, support
 
-### 2. Clinic Marketing Fee (10-25%)
+### 2. Organization Marketing Fee (10-25%)
 
 Your organization's revenue for patient acquisition:
 
-| Clinic Tier | Marketing Fee |
-|-------------|---------------|
+| Organization Tier | Marketing Fee |
+|-------------------|---------------|
 | Basic | 10-15% |
 | Standard | 15-20% |
 | Premium | 20-25% |
@@ -63,50 +63,50 @@ The healthcare professional's net earnings:
 
 ## Real-World Examples
 
-### Example 1: Community Expert in Your Clinic
+### Example 1: Community Expert in Your Organization
 
 ```
 Booking: $100 consultation
 Expert: Community tier, monthly plan
-Clinic: 18% marketing fee
+Organization: 18% marketing fee
 
 Breakdown:
 ├─ Eleva Platform Fee: $12.00 (12%)
-├─ Your Clinic Fee: $18.00 (18%)
+├─ Your Organization Fee: $18.00 (18%)
 └─ Expert Net: $70.00 (70%)
 
 Total fees: 30% ✅ (within 40% max)
 Expert share: 70% ✅ (above 60% min)
 ```
 
-### Example 2: Top Expert in Your Clinic
+### Example 2: Top Expert in Your Organization
 
 ```
 Booking: $150 therapy session
 Expert: Top tier, annual plan
-Clinic: 15% marketing fee
+Organization: 15% marketing fee
 
 Breakdown:
 ├─ Eleva Platform Fee: $12.00 (8%)
-├─ Your Clinic Fee: $22.50 (15%)
+├─ Your Organization Fee: $22.50 (15%)
 └─ Expert Net: $115.50 (77%)
 
 Total fees: 23% ✅ (within 40% max)
 Expert share: 77% ✅ (above 60% min)
 ```
 
-### Example 3: Monthly Clinic Revenue
+### Example 3: Monthly Organization Revenue
 
 ```
-Your Clinic: 5 experts, 100 total appointments
+Your Organization: 5 experts, 100 total appointments
 Average booking: $100
 Marketing fee: 15%
 
 Monthly Revenue:
 ├─ Gross bookings: $10,000
-├─ Your clinic revenue: $1,500 (15%)
+├─ Your organization revenue: $1,500 (15%)
 ├─ Workspace subscription: $199 (if Professional plan)
-└─ Total clinic income: ~$1,699/month
+└─ Total organization income: ~$1,699/month
 
 Annual projection: ~$20,388/year
 ```
@@ -122,7 +122,7 @@ Annual projection: ~$20,388/year
    - Brand value
 
 2. **Market Rates**
-   - Traditional clinics take 30-50%
+   - Traditional practices take 30-50%
    - Your digital advantage: 10-25%
    - Competitive but fair
 
@@ -154,7 +154,7 @@ To set your marketing fee:
 | Maximum total fees | 40% |
 | Fee change notice | 30 days |
 
-### For Clinics
+### For Organizations
 
 | Rule | Limit |
 |------|-------|
@@ -167,52 +167,52 @@ To set your marketing fee:
 If you try to set a 30% marketing fee:
 
 ```
-Error: Clinic fee (30%) would exceed maximum (25%)
+Error: Organization fee (30%) would exceed maximum (25%)
 Action: Please set a fee between 10-25%
 ```
 
 If combined fees would exceed 40%:
 
 ```
-Error: Combined fees (35% clinic + 12% platform = 47%) 
+Error: Combined fees (35% organization + 12% platform = 47%) 
        would exceed maximum 40% for Community Expert.
-Action: Reduce clinic fee or wait for expert tier upgrade.
+Action: Reduce organization fee or wait for expert tier upgrade.
 ```
 
 ## Expert Tier Benefits
 
-Experts keep their tier benefits when joining your clinic:
+Experts keep their tier benefits when joining your organization:
 
-### Community Expert in Clinic
+### Community Expert in Organization
 
 ```
-Solo: 80-88% net (no clinic fee)
-With Clinic: 60-77% net (includes clinic fee)
+Solo: 80-88% net (no organization fee)
+With Organization: 60-77% net (includes organization fee)
 
 Trade-off: Lower net per booking
-Benefit: More bookings from clinic's patients
+Benefit: More bookings from organization's patients
 ```
 
-### Top Expert in Clinic
+### Top Expert in Organization
 
 ```
-Solo: 85-92% net (no clinic fee)
-With Clinic: 65-82% net (includes clinic fee)
+Solo: 85-92% net (no organization fee)
+With Organization: 65-82% net (includes organization fee)
 
 Trade-off: Lower net per booking
-Benefit: More bookings from clinic's patients
+Benefit: More bookings from organization's patients
 ```
 
-## Comparison: Solo vs. Clinic
+## Comparison: Solo vs. Organization
 
 Help experts understand the value:
 
-| Metric | Solo Expert | With Your Clinic |
-|--------|-------------|------------------|
+| Metric | Solo Expert | With Your Organization |
+|--------|-------------|------------------------|
 | Net per booking | 80-92% | 60-82% |
-| Patient acquisition | Self | Clinic provides |
-| Marketing costs | Self | Clinic covers |
-| Admin support | None | Clinic provides |
+| Patient acquisition | Self | Organization provides |
+| Marketing costs | Self | Organization covers |
+| Admin support | None | Organization provides |
 | Brand value | Individual | Organization |
 
 ## Reporting & Analytics
@@ -222,7 +222,7 @@ Help experts understand the value:
 Your Partner Dashboard shows:
 
 - **Gross Bookings**: Total booking value
-- **Your Revenue**: Clinic marketing fees earned
+- **Your Revenue**: Organization marketing fees earned
 - **Expert Payouts**: Amount paid to experts
 - **Platform Fees**: Eleva's platform fees
 
@@ -238,12 +238,10 @@ Download reports for:
 ## Next Steps
 
 <Cards>
-  <Card title="View Analytics" href="/docs/clinic/analytics/dashboard">
+  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
     See detailed revenue reports
   </Card>
-  <Card title="Manage Experts" href="/docs/clinic/team/experts">
+  <Card title="Manage Experts" href="/docs/organization/team/experts">
     Optimize your team's performance
   </Card>
 </Cards>
-
-
