--- a/src/content/docs/workspace/en/team/experts.mdx
+++ b/src/content/docs/workspace/en/team/experts.mdx
@@ -13,7 +13,7 @@ Your team of healthcare professionals is the heart of your organization. This gu
 
 Healthcare professionals employed by or contracted with your organization:
 
-- Work exclusively or primarily through your clinic
+- Work exclusively or primarily through your organization
 - Use your organization's branding
 - Subject to your marketing fee
 - Managed through your dashboard
@@ -24,7 +24,7 @@ Independent professionals from Eleva Care's expert network:
 
 - Work with multiple organizations
 - Maintain their individual brand
-- Subject to your marketing fee when booked through your clinic
+- Subject to your marketing fee when booked through your organization
 - Can be featured on your organization profile
 
 ## Adding Experts to Your Organization
@@ -36,7 +36,7 @@ If the expert already has an Eleva Care profile:
 1. Go to **Team Management** → **Invite Expert**
 2. Enter their email address
 3. They receive an invitation to join your organization
-4. Once accepted, their profile appears under your clinic
+4. Once accepted, their profile appears under your organization
 
 ### Option 2: Invite New Experts
 
@@ -73,22 +73,22 @@ From your organization dashboard, you can view:
 
 ## Expert Tier Benefits
 
-Experts maintain their individual tier when joining your clinic:
+Experts maintain their individual tier when joining your organization:
 
 ### Community Experts
 
 - Platform fee: 12-20%
-- Your clinic fee: 10-25%
+- Your organization fee: 10-25%
 - Expert net: 60-77%
 
 ### Top Experts
 
 - Platform fee: 8-15%
-- Your clinic fee: 10-25%
+- Your organization fee: 10-25%
 - Expert net: 60-82%
 
 <Callout type="success">
-  **Expert Protection**: Experts keep their tier benefits when joining a clinic. Top experts still pay lower platform fees.
+  **Expert Protection**: Experts keep their tier benefits when joining an organization. Top experts still pay lower platform fees.
 </Callout>
 
 ## Commission Visibility
@@ -98,7 +98,7 @@ Your experts can see a detailed breakdown of each booking:
 ```
 Booking Amount: $100.00
 ├─ Eleva Platform Fee: $8.00 (8%)
-├─ Clinic Marketing Fee: $15.00 (15%)
+├─ Organization Marketing Fee: $15.00 (15%)
 └─ Expert Net: $77.00 (77%)
 ```
 
@@ -106,14 +106,14 @@ This transparency helps build trust with your team.
 
 ## Managing Expert Permissions
 
-### Clinic Admins Can:
+### Organization Admins Can:
 
 - View expert availability and bookings
 - Access aggregate analytics
-- Configure clinic-wide settings
+- Configure organization-wide settings
 - Remove experts from the organization
 
-### Clinic Admins Cannot:
+### Organization Admins Cannot:
 
 - Change expert's individual settings
 - Access expert's personal financial details
@@ -152,12 +152,10 @@ To remove an expert from your organization:
 ## Next Steps
 
 <Cards>
-  <Card title="Send Invitations" href="/docs/clinic/team/invitations">
+  <Card title="Send Invitations" href="/docs/organization/team/invitations">
     Learn about the invitation process in detail
   </Card>
-  <Card title="Understand Revenue" href="/docs/clinic/pricing/revenue">
+  <Card title="Understand Revenue" href="/docs/organization/pricing/revenue">
     See how revenue is shared with your experts
   </Card>
 </Cards>
-
-
