--- a/src/content/docs/workspace/en/team/invitations.mdx
+++ b/src/content/docs/workspace/en/team/invitations.mdx
@@ -34,7 +34,7 @@ Fill out the invitation form:
 Click **Send Invitation**. The expert receives an email with:
 
 - Your organization name and logo
-- Your clinic marketing fee (e.g., "15% marketing fee")
+- Your marketing fee (e.g., "15% marketing fee")
 - An explanation of the revenue model
 - A link to accept or decline
 
@@ -45,20 +45,20 @@ Click **Send Invitation**. The expert receives an email with:
 The invitation email includes:
 
 ```
-Subject: You're Invited to Join [Your Clinic Name] on Eleva Care
+Subject: You're Invited to Join [Your Organization Name] on Eleva Care
 
 Hi [Expert Name],
 
-[Your Clinic Name] has invited you to join their healthcare team on Eleva Care.
+[Your Organization Name] has invited you to join their healthcare team on Eleva Care.
 
 What this means for you:
-• Access to patients from [Your Clinic Name]'s network
+• Access to patients from [Your Organization Name]'s network
 • Marketing and patient acquisition support
 • Administrative assistance
 
 Revenue sharing:
 • Platform fee: 8-20% (based on your tier)
-• Clinic marketing fee: 15%
+• Organization marketing fee: 15%
 • Your net: 65-77%
 
 [Accept Invitation] [Decline Invitation]
@@ -68,8 +68,8 @@ Revenue sharing:
 
 Experts can use a calculator to see their estimated earnings:
 
-| Booking | Platform Fee | Clinic Fee | Expert Net |
-|---------|-------------|------------|------------|
+| Booking | Platform Fee | Organization Fee | Expert Net |
+|---------|-------------|------------------|------------|
 | €100 | €8-12 | €15 | €73-77 |
 | €150 | €12-18 | €22.50 | €109.50-115.50 |
 | €200 | €16-24 | €30 | €146-154 |
@@ -127,7 +127,7 @@ When accepting, experts agree to:
 - Your organization's marketing fee
 - Revenue sharing model
 - Eleva Care's Terms of Service
-- Your clinic's policies (if any)
+- Your organization's policies (if any)
 
 <Callout type="info">
   **Fee Changes**: If you change your marketing fee after experts join, you must notify them 30 days in advance.
@@ -150,7 +150,7 @@ Common reasons and solutions:
 |--------|----------|
 | Fee too high | Consider lowering your marketing fee |
 | Unclear value | Explain your patient acquisition strategy |
-| Already in another clinic | They can join multiple organizations |
+| Already in another organization | They can join multiple organizations |
 | Not ready | Follow up in a few weeks |
 
 ### Expert Can't Complete Setup
@@ -168,10 +168,10 @@ If an expert is stuck during onboarding:
 Instead of generic invitations:
 
 ```
-❌ "Join our clinic on Eleva Care"
+❌ "Join our organization on Eleva Care"
 
 ✅ "Hi Dr. Maria! I've been impressed by your work in women's health. 
-We'd love to have you join Family Health Clinic. Our patients would 
+We'd love to have you join our team. Our patients would 
 benefit greatly from your expertise in prenatal care."
 ```
 
@@ -196,12 +196,10 @@ After sending invitations:
 ## Next Steps
 
 <Cards>
-  <Card title="Manage Your Team" href="/docs/clinic/team/experts">
+  <Card title="Manage Your Team" href="/docs/organization/team/experts">
     Learn about ongoing expert management
   </Card>
-  <Card title="View Analytics" href="/docs/clinic/analytics/dashboard">
+  <Card title="View Analytics" href="/docs/organization/analytics/dashboard">
     Track your organization's performance
   </Card>
 </Cards>
-
-
